[package]
name = "feed_parser"
authors = ["Dwight Browne <dwight@dwightjbrowne.com>"]
description = "POC parser for NYSE Historical Data"
license = "MIT"
README = "README.md"
repository = "https://github.com/dwightbrowne/feed_parser"
keywords = [ "Finance", "NYSE", "Historical Data", "Parser" ]
categories = ["finance"]


version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
time = "0.3.21"
dotenvy = "0.15.7"
thousands = "0.2.0"
walkdir = "2.3.3"
priority-queue = "1.3.1"
rust_decimal = "1.3.0"
rust_decimal_macros = "1.30"
ndarray = "0.15.6"
plotly = { version="0.8.3", features = ["ndarray","kaleido"] }
